# SPDX-FileCopyrightText: The im-pathtree authors
# SPDX-License-Identifier: MPL-2.0

[package]
name = "im-pathtree"
description = "Immutable, path-addressable tree data structure"
version = "0.2.0"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/uklotzde/im-pathtree"
categories = ["data-structures"]
keywords = ["immutable", "tree", "path"]
edition = "2021"
include = ["/src", "/README.md", "/LICENSES"]

[dependencies]
derive_more = "0.99.17"
log = "0.4.20"
thiserror = "1.0.56"

im = { version = "15.1.0", optional = true }

[features]
"default" = ["im"]
"im" = ["dep:im"]

[lints.rust]
future_incompatible = "warn"
let_underscore = "warn"
missing_debug_implementations = "warn"
rust_2018_idioms = "warn"
rust_2021_compatibility = "warn"
unreachable_pub = "warn"
unsafe_code = "warn"
unused = "warn"

[lints.clippy]
pedantic = "warn"
clone_on_ref_ptr = "warn"
missing_const_for_fn = "warn"
self_named_module_files = "warn"
