# SPDX-FileCopyrightText: The im-pathtree authors
# SPDX-License-Identifier: MPL-2.0

[package]
name = "im-pathtree"
description = "Immutable, path-addressable tree data structure"
version = "0.8.3"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/uklotzde/im-pathtree"
categories = ["data-structures"]
keywords = ["immutable", "tree", "path"]
edition = "2021"
rust-version = "1.76"
include = ["/src", "/README.md", "/LICENSES"]

[dependencies]
itertools = "0.13.0"
log = "0.4.22"
thiserror = "1.0.63"

im = { version = "15.1.0", optional = true }

[features]
"default" = ["im"]
"im" = ["dep:im"]

[lints.rust]
future_incompatible = "warn"
let_underscore = "warn"
missing_debug_implementations = "warn"
rust_2018_idioms = "warn"
rust_2021_compatibility = "warn"
unreachable_pub = "warn"
unsafe_code = "warn"
unused = "warn"

[lints.clippy]
pedantic = "warn"
clone_on_ref_ptr = "warn"
missing_const_for_fn = "warn"
self_named_module_files = "warn"

# Repeating the type name in `Default::default()` expressions is not needed as
# long as the context is obvious.
default_trait_access = "allow"

# The error types returned should be self-explanatory.
missing_errors_doc = "allow"

# Repetitions of module/type names occur frequently when using many modules for
# keeping the size of the source files handy. Often types have the same name as
# their parent module.
module_name_repetitions = "allow"

# This warns even when lint group and lint have the same level (`warn`).
# This is very misleading and results in lots of false positives.
# See also: <https://github.com/rust-lang/rust-clippy/issues/12270>
lint_groups_priority = "allow"
